Setup a new host alias so oauth stuff can be developed.

--- a/vagrant/chef/cookbooks/my_cookbook/templates/default/hosts.erb
+++ b/vagrant/chef/cookbooks/my_cookbook/templates/default/hosts.erb
@@ -12,5 +12,9 @@ ff02::2 ip6-allrouters
 <%= @app_ip %>	imat.dev.local
 <%= @app_ip %>	windowsonwar.dev.local
 <%= @app_ip %>	wordpress.dev.local
+<%= @app_ip %>	zendskeleton.dev.local
+
+# Needed because oauth likes a "proper" domain
+<%= @app_ip %>	zendskeleton.dev.nottingham.ac.uk
 
 <%= @db_ip %>	db.local
