vhost and hosts changes added phpunit install to app server.

--- a/vagrant/chef/cookbooks/my_cookbook/templates/default/hosts.erb
+++ b/vagrant/chef/cookbooks/my_cookbook/templates/default/hosts.erb
@@ -9,12 +9,14 @@ ff02::1 ip6-allnodes
 ff02::2 ip6-allrouters
 
 <%= @app_ip %>	dev.local
+<%= @app_ip %>	bestbetsv2.dev.local
 <%= @app_ip %>	imat.dev.local
 <%= @app_ip %>	windowsonwar.dev.local
 <%= @app_ip %>	wordpress.dev.local
 <%= @app_ip %>	zendskeleton.dev.local
 
 # Needed because oauth likes a "proper" domain
+<%= @app_ip %>	bestbetsv2.dev.nottingham.ac.uk
 <%= @app_ip %>	zendskeleton.dev.nottingham.ac.uk
 
 <%= @db_ip %>	db.local
